force-app/main/default/objects/CompanyLoginAverage__c/CompanyLoginAverage__c.object-meta.xml
<CustomObject>
    <label>Company Login Average</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Login Average</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>