force-app/main/default/objects/CompanyLoginAverage__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>