force-app/main/default/objects/CompanyLoginAverage__c/fields/LoginDate__c.field-meta.xml
<CustomField>
    <fullName>LoginDate__c</fullName>
    <label>Login Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>