force-app/main/default/objects/CompanyLoginAverage__c/fields/LoginMonth__c.field-meta.xml
<CustomField>
    <fullName>LoginMonth__c</fullName>
    <formula>TEXT(YEAR(LoginDate__c)) &amp; &quot;/&quot; &amp; IF(Month(LoginDate__c) &lt; 10, &quot;0&quot; &amp; TEXT(Month(LoginDate__c)), TEXT(Month(LoginDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login Month</label>
    <type>Text</type>
</CustomField>