force-app/main/default/objects/CompanyLoginAverage__c/fields/LoginYear__c.field-meta.xml
<CustomField>
    <fullName>LoginYear__c</fullName>
    <formula>TEXT(YEAR(LoginDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login Year</label>
    <type>Text</type>
</CustomField>