force-app/main/default/objects/CompanyLoginAverage__c/fields/MonthlyLoginAverage__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLoginAverage__c</fullName>
    <formula>MonthlyLoginCount__c/MonthlyUserCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Login Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>