force-app/main/default/objects/CompanyLoginAverage__c/fields/MonthlyLoginCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLoginCount__c</fullName>
    <label>Monthly Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>