force-app/main/default/objects/CompanyLoginAverage__c/fields/MonthlyUserCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyUserCount__c</fullName>
    <label>Monthly User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>