force-app/main/default/objects/CompanyLoginAverage__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>